# local_media_tools

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  marketplace.json  package.json  pyproject.toml
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.claude/commands/: discover.md  full-run.md
agents/: config-validator.md
commands/: add-source.md  list-sources.md  remove-source.md  research.md  setup-location.md  setup.md  update-event.md  write.md
config/: __init__.py  config_schema.py  sources.example.yaml
docs/: README.md  architecture.md  commands.md  configuration.md  development.md  getting-started.md  troubleshooting.md
docs/examples/: facebook.md  instagram.md  web-aggregator.md
schemas/: __init__.py  event.py  sqlite_storage.py  storage.py
scripts/: __init__.py  cli_events.py  cli_instagram.py  cli_newsletter.py  cli_web.py  deduplicate.py  facebook_bridge.py  facebook_discover.py  generate_newsletter.py  migrate_json_to_sqlite.py  migrate_unique_keys.py  paths.py  post-install.sh  profile_source.py  scrape_facebook.js  scrape_firecrawl.py  scrape_instagram.py  setup.sh  url_utils.py  validate_setup.py
skills/newsletter-events-add-source/: SKILL.md
skills/newsletter-events-list-sources/: SKILL.md
skills/newsletter-events-remove-source/: SKILL.md
skills/newsletter-events-research/: SKILL.md
skills/newsletter-events-write/: SKILL.md
templates/: newsletter.md.j2
tests/: __init__.py  conftest.py  test_cli_instagram.py  test_event_schema.py  test_sqlite_storage.py  test_url_utils.py
(+22 files in other folders)
